fix(friends): adjust page spacing

--- a/components/views/friends/add/Add.less
+++ b/components/views/friends/add/Add.less
@@ -1,7 +1,7 @@
 .add {
   display: flex;
   flex-direction: column;
-  gap: @normal-spacing;
+  gap: 8px;
 
   .title-container {
     display: flex;
