--- a/pages/friends/Friends.less
+++ b/pages/friends/Friends.less
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
   overflow-y: scroll;
   padding: @normal-spacing;
-  gap: 8px;
+  gap: 16px;
 
   .col {
     flex: 1;
